--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
